k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: people-recognition
  namespace: people-recognition
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: camera.thesis-i.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: people-recognition
                port:
                  name: http
